Fix mock-up alignment

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ html {
     position: relative;
     vertical-align: middle;
     top:20px;
-    left:-5px;
+    left:-3px;
     width:100%;
     height:auto;
     max-width:480px;
